# oxi-nixinfra

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  devenv.nix  flake.nix  justfile  mkdocs.yml  prek.toml  pyproject.toml
.config/: wt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  upstream-check.yml
docs/: nixos-internals.md
docs/adr/: 0001-drop-static-analysis-milestone.md  0002-remove-graphify.md
docs/agents/: domain.md
docs/internals/: book.toml
docs/internals/src/: SUMMARY.md  adding-a-module.md  architecture.md  build-system.md  introduction.md  testing.md
docs/specs/: 2026-06-16-nixos-native-module-redesign.md
docs/user/: .pages  index.md
docs/user/explanation/: .pages  architecture.md  async-first-design.md  why-nixos-only.md
docs/user/how-to/: .pages  configure-connection.md  migrate-from-testinfra.md  test-files.md  test-nix-options.md  test-nix-packages.md  test-services.md  test-users.md  use-async-tests.md
docs/user/reference/: .pages  command-result.md  configuration.md  host.md
docs/user/reference/modules/: .pages  environment.md  file.md  mountpoint.md  nix-option.md  nix-package.md  process.md  service.md  socket.md  sysctl.md  system-info.md  user.md
docs/user/tutorials/: .pages  getting-started.md
nix/: test-vm.nix  vm_smoke_test.py
oxi-nixinfra-macros/: Cargo.toml
oxi-nixinfra-macros/src/: lib.rs  nix_module.rs  register.rs
python/oxi_nixinfra/: __init__.py  _config.py  _plugin.py  plugin.py
src/: command.rs  helpers.rs  host.rs  lib.rs  parse.rs
src/backend/: local.rs  mock.rs  mod.rs  ssh.rs
src/modules/: environment.rs  file.rs  mod.rs  mountpoint.rs  nix_option.rs  nix_package.rs  process.rs  service.rs  socket.rs  sysctl.rs  system_info.rs  user.rs
tests/: test_plugin_contract.py  test_smoke.py
tests/integration/: conftest.py  test_async.py  test_environment.py  test_file.py  test_host.py  test_mountpoint.py  test_nix_package.py  test_process.py  test_service.py  test_socket.py  test_sysctl.py  test_system_info.py  test_user.py
