[package]
name = "oxi-nixinfra"
version = "0.1.0"
edition = "2024"

[lib]
name = "_oxi_nixinfra"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "process"] }
openssh = { version = "0.11", features = ["process-mux"] }
async-trait = "0.1"
