[package]
name = "oxi-nixinfra"
version = "0.1.0"
edition = "2024"

[lib]
name = "_oxi_nixinfra"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23" }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "process"] }
openssh = { version = "0.11", features = ["process-mux"] }
async-trait = "0.1"

[dev-dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# PyO3 patterns require these
missing_const_for_fn = "allow"
needless_pass_by_value = "allow"
unused_self = "allow"
ref_option = "allow"
# Nursery false positives
significant_drop_tightening = "allow"
option_if_let_else = "allow"
# Pedantic noise
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
future_not_send = "allow"
