[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "oxi-nixinfra"
dynamic = ["version"]
description = "NixOS infrastructure testing library — oxitest plugin, Rust core"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "oxi_nixinfra._oxi_nixinfra"

[tool.oxitest]
plugins = ["oxi_nixinfra.plugin"]
markers = ["nixos: test requires NixOS"]
strict = "abort"

[tool.oxitest.plugin_settings.oxi_nixinfra.plugin]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A", "C4", "SIM", "RET", "PTH", "PERF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "B017", "B018"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.codespell]
skip = "target,.venv,Cargo.lock,.git,graphify-out,*.min.js,*/docs/site/*,*/docs/internals/book/*"

[dependency-groups]
build = ["maturin>=1.0,<2.0"]
test = [{ include-group = "build" }, "oxitest>=1.0.0b2"]
code-quality = ["ruff>=0.11", "codespell>=2"]
docs = [
    "mkdocs-material>=9",
    "mkdocs-awesome-pages-plugin>=2.10",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
]
